Fixed the logic behind creating vote campaign for global regions

--- a/e-gov-frontend/src/pages/ResultsPage.module.css
+++ b/e-gov-frontend/src/pages/ResultsPage.module.css
@@ -1,4 +1,7 @@
 .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background: rgba(255, 255, 255, 0.08);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
@@ -7,10 +10,36 @@
   border: 1px solid rgba(255, 255, 255, 0.53);
   color: var(--light);
   max-width: 900px;
-  margin: 0 auto;
+  margin: 50px auto;
   padding: 40px 30px;
 }
 
 .resultsContainer {
   padding: 50px;
+}
+
+.results,
+.regionResults {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 50px;
+}
+
+.regionSelect {
+  padding: 5px;
+  font-size: 1.1rem;
+  border-radius: 10px;
+  position: relative;
+  margin-right: -600px;
+  margin-top: -40px;
+}
+
+.regionTitle {
+  padding-top: 40px;
+}
+
+.pieChart label {
+  color: "white" !important;
+  border: 1px solid black;
 }
